tests/fixtures/invalid/const_embedded_aggregate_array_element_pointer_field_assignment.c
struct Node {
    int * const cursor;
};

struct Box {
    struct Node nodes[1];
};

int main(void) {
    int values[2] = {3, 5};
    struct Box box = {{{values}}};
    box.nodes[0].cursor = values + 1;
    return 0;
}
